--- a/notebooks/test_meta_learner/acs_income/ACS_Income_Batch1.ipynb
+++ b/notebooks/test_meta_learner/acs_income/ACS_Income_Batch1.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d78aeb7d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:40.747155Z",
+     "start_time": "2024-03-04T23:06:40.570797Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# !pip install -r ./requirements.txt"
@@ -12,9 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d706f602",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:40.748310Z",
+     "start_time": "2024-03-04T23:06:40.573274Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# !pip uninstall virny -y"
@@ -22,9 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e89a5669",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:40.748493Z",
+     "start_time": "2024-03-04T23:06:40.579537Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Install using an HTTP link\n",
@@ -36,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "128eed2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-04T21:58:02.303388Z",
-     "start_time": "2024-03-04T21:58:01.890239Z"
+     "end_time": "2024-03-04T23:06:41.041557Z",
+     "start_time": "2024-03-04T23:06:40.596529Z"
     }
    },
    "outputs": [],
@@ -53,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6ed040a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-04T21:58:02.313298Z",
-     "start_time": "2024-03-04T21:58:02.306076Z"
+     "end_time": "2024-03-04T23:06:41.073643Z",
+     "start_time": "2024-03-04T23:06:41.044398Z"
     }
    },
    "outputs": [],
@@ -71,12 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "435ed8bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-04T21:58:02.327516Z",
-     "start_time": "2024-03-04T21:58:02.314718Z"
+     "end_time": "2024-03-04T23:06:41.128907Z",
+     "start_time": "2024-03-04T23:06:41.082642Z"
     }
    },
    "outputs": [
@@ -106,10 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9714b452",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:49.736694Z",
+     "start_time": "2024-03-04T23:06:41.131211Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tempeh': LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "pip install 'aif360[LawSchoolGPA]'\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
     "\n",
@@ -132,9 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4e66ac44",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:49.814419Z",
+     "start_time": "2024-03-04T23:06:49.733781Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ROOT_DIR = os.getcwd()\n",
@@ -157,10 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6bf5b49a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:49.934500Z",
+     "start_time": "2024-03-04T23:06:49.806244Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'fairness_variance'"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -171,9 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5e42af71",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:50.360250Z",
+     "start_time": "2024-03-04T23:06:49.941060Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from source.utils.db_functions import connect_to_mongodb\n",
@@ -183,12 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "06e3ba9d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-04T21:58:05.377447Z",
-     "start_time": "2024-03-04T21:58:05.349856Z"
+     "end_time": "2024-03-04T23:06:50.456525Z",
+     "start_time": "2024-03-04T23:06:50.366640Z"
     }
    },
    "outputs": [
@@ -220,10 +273,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "69534170",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:53.164155Z",
+     "start_time": "2024-03-04T23:06:50.450766Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  SCHL COW MAR  OCCP POBP RELP SEX RAC1P  AGEP  WKHP\n0   23   7   3   230   36    0   1     1    55  55.0\n1   16   1   5  4110   13    2   2     1    20  35.0\n2   16   4   3  4130   51    0   2     1    59  30.0\n3   18   4   1  4020   13    0   1     2    43  40.0\n4   14   1   1  8300   20    1   2     2    33  20.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SCHL</th>\n      <th>COW</th>\n      <th>MAR</th>\n      <th>OCCP</th>\n      <th>POBP</th>\n      <th>RELP</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>AGEP</th>\n      <th>WKHP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>23</td>\n      <td>7</td>\n      <td>3</td>\n      <td>230</td>\n      <td>36</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>55</td>\n      <td>55.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>16</td>\n      <td>1</td>\n      <td>5</td>\n      <td>4110</td>\n      <td>13</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>20</td>\n      <td>35.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>16</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4130</td>\n      <td>51</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>59</td>\n      <td>30.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>18</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4020</td>\n      <td>13</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>43</td>\n      <td>40.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>14</td>\n      <td>1</td>\n      <td>1</td>\n      <td>8300</td>\n      <td>20</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>33</td>\n      <td>20.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_loader = ACSIncomeDataset(state=['GA'], year=2018, with_nulls=False,\n",
     "                               subsample_size=15_000, subsample_seed=42)\n",
@@ -232,10 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ba126e4e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:53.408436Z",
+     "start_time": "2024-03-04T23:06:53.162833Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(15000, 10)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_loader.X_data.shape"
    ]
@@ -258,9 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "12438df8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:53.426906Z",
+     "start_time": "2024-03-04T23:06:53.276065Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tuned_params_filenames = [\n",
@@ -272,9 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dc6e1377",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:06:53.543541Z",
+     "start_time": "2024-03-04T23:06:53.375946Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -291,10 +383,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1783feb5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:08:58.162717Z",
+     "start_time": "2024-03-04T23:06:53.498709Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-05 01:06:53 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 100,\n",
+      " 'experiment_iteration': 'Exp_iter_1',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'model_init_seed': 100,\n",
+      " 'session_uuid': '8c9cf23a-9b8f-49fd-a7e2-270c2c3db69c'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ed5af42024604c4a8b537f199ab6b132"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-05 01:06:54 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-03-05 01:06:54 experiment_interface.py INFO    : Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.0\n",
+      "Skip preprocessing\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
+      "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
+      "       'cat__SCHL_17', 'cat__SCHL_18',\n",
+      "       ...\n",
+      "       'cat__RELP_2', 'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5',\n",
+      "       'cat__RELP_6', 'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP',\n",
+      "       'num__WKHP'],\n",
+      "      dtype='object', length=723)\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
+      "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
+      "             8665,  6253],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
+      "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
+      "             8665,  6253],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /Users/denys_herasymuk/UCU/4course_2term/Bachelor_Thesis/Code/fairness-variance/results/test_meta_learner/acs_income/tuning_results_Folktables_GA_2018_Income_alpha_0.0.csv\n",
+      "LogisticRegression:  {'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l1', 'random_state': 100, 'solver': 'saga', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "58b39cc7787544e19272bc945469f79d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabled a 'meta_learner' mode\n",
+      "self.y_pred_test.index[:10] --  Int64Index([10155, 11689, 12599, 12193, 8678, 8217, 4670, 12087, 5235, 4189], dtype='int64')\n",
+      "self.error_test.index[:10] --  Int64Index([10155, 11689, 12599, 12193, 8678, 8217, 4670, 12087, 5235, 4189], dtype='int64')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
     "                                   experiment_seed=experiment_seed,\n",
@@ -324,7 +516,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e8a5b441",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:08:58.172316Z",
+     "start_time": "2024-03-04T23:08:58.168400Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -348,7 +545,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c780e803",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:08:58.216518Z",
+     "start_time": "2024-03-04T23:08:58.177437Z"
+    }
+   },
    "outputs": [],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
@@ -379,7 +581,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6516a68e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-04T23:08:58.183762Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -403,7 +609,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ab04171",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-04T23:08:58.192983Z"
+    }
+   },
    "outputs": [],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
@@ -434,7 +644,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d65487cc",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-04T23:08:58.202011Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -458,7 +672,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a437f806",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-04T23:08:58.209672Z"
+    }
+   },
    "outputs": [],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
@@ -489,7 +707,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2b355f19",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-04T23:08:58.214013Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -513,7 +735,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5ccedf69",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:08:58.228796Z",
+     "start_time": "2024-03-04T23:08:58.219731Z"
+    }
+   },
    "outputs": [],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
@@ -544,7 +771,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "70aa9c3b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-04T23:08:58.227575Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -568,7 +799,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "680806fa",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T23:08:58.261195Z",
+     "start_time": "2024-03-04T23:08:58.237436Z"
+    }
+   },
    "outputs": [],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
@@ -591,7 +827,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d0c842dd",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-04T23:08:58.244860Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
